--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
 
             <div class="content">
-                <h5>TravelX</h5>
+                 <h5>Adventure-Travelers</h5>
                 <h1>let's embark on your dream journey</h1>
                 <p>discover inspiring destinatons, create unfgettable memories, and travel with confidence - adventure start adventure starts here</p>
 
