--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <section class="footer">
             <div class="container">
                 <div class="detail">
-                    <h3>TravelX</h3>
+                    <h3>Adventure-Travelers</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere in, non praesentium soluta quis enim aperiam aliquam, rem totam porro, vel obcaecati modi architecto error maiores iusto quaerat aut eum.</p>
                     <h5>get in touch</h5>
                     <a href="#">ankityadav12502@mail.com</a>
